<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- O-Touch settings -->
    <string name="backpad_panel_title" translatable="false">O-Touch</string>

    <string name="touchpad_enable_title">Enable O-Touch</string>
    <string name="touchpad_enable_summary">Rear touchpad to navigate the phone</string>
    <string name="touchpad_long_press_title">Long press to launch camera</string>
    <string name="touchpad_long_press_summary">Long press on the touchpad will launch the camera application</string>
    <string name="touchpad_double_tap_title">Double tap to capture</string>
    <string name="touchpad_double_tap_summary">While in camera, double tap to capture image</string>

    <!-- Gesture shortcuts -->
    <string name="touchscreen_camera_gesture_title">Camera</string>
    <string name="touchscreen_camera_gesture_summary">Draw a circle to activate camera</string>
    <string name="touchscreen_music_gesture_title">Music</string>
    <string name="touchscreen_flashlight_gesture_title">Flashlight</string>
    <string name="touchscreen_flashlight_gesture_summary">Draw a \'V\' to toggle flashlight</string>
    <string name="touchscreen_music_gesture_summary">Use gestures to control music playback \n
    • Two fingers vertically to play/pause\n
    • Draw left arrow for previous track\n
    • Draw right arrow for next track</string>

    <!-- O-Click settings -->
    <string name="oclick_panel_title" translatable="false">O-Click</string>

    <string name="oclick_connect_string">Connect</string>
    <string name="oclick_disconnect_string">Disconnect</string>
    <string name="oclick_summary_connected">Connected to O-Click</string>
    <string name="oclick_summary_paired">O-Click paired, but disconnected</string>
    <string name="oclick_dialog_title" translatable="false">O-Click</string>
    <string name="oclick_dialog_connecting_message">Connecting to O-Click\u2026\nPress the O-Click button to speed up discovery.</string>
    <string name="oclick_take_snapshot_title">Remote camera shutter</string>
    <string name="oclick_take_snapshot_summary">Single click to take picture</string>
    <string name="oclick_find_my_phone_title">Phone locator</string>
    <string name="oclick_find_my_phone_summary">Double click to find phone</string>
    <string name="oclick_fence_title">Proximity alert</string>
    <string name="oclick_fence_summary">Alert when not near phone</string>
    <string name="oclick_disconnect_alert_title">Out of range alert</string>
    <string name="oclick_disconnect_alert_summary">Alert when outside of reach</string>

    <string name="alert_category_title">Alerts</string>
    <string name="action_category_title">Actions</string>

    <!-- O-Click notification -->
    <string name="oclick_locator_notification_title">O-Click phone locator</string>
    <string name="oclick_locator_notification_text">Locator alert is playing. Tap to dismiss</string>
    <string name="oclick_notification_title_connected">O-Click connected</string>
    <string name="oclick_notification_title_disconnected">O-Click disconnected</string>
    <string name="oclick_notification_content_disconnected">Press the O-Click button to reconnect</string>

    <!-- Button settings -->
    <string name="button_panel_title">Additional buttons</string>
    <string name="button_swap_title">Swap buttons</string>
    <string name="button_swap_summary">Swap the order of recents and back buttons</string>

    <!-- Notification slider -->
    <string name="notification_slider_category_title">Notification slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_ignore_auto_title">Disable during automatic rules</string>
    <string name="notification_slider_ignore_auto_summary">Ignore the slider when an automatic rule is active</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_none">All notifications</string>
    <string name="notification_slider_mode_vibrate">Vibrate</string>
    <string name="notification_slider_mode_ring">Ring</string>
</resources>
